--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko"
 title                    : "Anna's Analysis"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
@@ -65,7 +65,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
+search                   : true # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
@@ -116,6 +116,12 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:jhj7347@naver.com
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/AnnaJeong"           
+    - label: "Linked In"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/in/heejeong-jeong-82a2b7155/"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://annajeong.github.io"
@@ -125,12 +131,10 @@ author:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "htt[s://github.com/AnnaJeong"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+
 
 # Site Footer
 footer:
