--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ main:
     sublinks:
       - title: "Algorithm & Data Structure"
         url: /algorithm/
+      - title: "PRML"
+        url: /prml/
   # - title: "Data Science"
   #   url: /data_science/
   #   sublinks: 
