--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Categories"
     url: /categories/
     sublinks:
-      - title: "Algorithm & Data Structure"
+      - title: "Algorithm"
         url: /algorithm/
       - title: "PRML"
         url: /prml/
