--- a/_config.yml
+++ b/_config.yml
@@ -297,6 +297,8 @@ defaults:
       comments: true # true
       share: true
       related: true
+      toc_ads: true
+      toc_sticky: true
   
   # _pages
   - scope:
