--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ main:
         url: /hadoop/
       - title: "PRML"
         url: /prml/
+      - title: "Docker"
+        url: /docker/
   # - title: "Data Science"
   #   url: /data_science/
   #   sublinks: 
